--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/node": "^16.18.22",
     "@types/react": "^18.0.31",
     "@types/react-dom": "^18.0.11",
+    "dotenv": "^16.0.3",
     "firebase": "^9.18.0",
     "mapbox-gl": "^2.13.0",
     "openbim-components": "^0.0.51",
@@ -44,7 +45,5 @@
   "browserslist": [
     "defaults",
     "not ie 11"
-  ]  
+  ]
 }
-
-
