--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "openbim-components": "^0.0.51",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-full-screen": "^1.1.1",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
     "three": "^0.135.0",
