--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@types/react": "^18.0.31",
     "@types/react-dom": "^18.0.11",
     "@types/w3c-web-nfc": "^1.0.0",
+    "client-zip": "^2.4.2",
+    "dexie": "^3.2.3",
     "dotenv": "^16.0.3",
     "firebase": "^9.18.0",
     "mapbox-gl": "^2.13.0",
@@ -27,6 +29,7 @@
     "react-scripts": "5.0.1",
     "three": "^0.135.0",
     "typescript": "^4.9.5",
+    "unzipit": "^1.4.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
